--- a/index.html
+++ b/index.html
@@ -2,7 +2,8 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" href="/favicon.ico" />
+    <link rel="icon" href="/vite.svg" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>The 4M</title>
     <link
       href="https://fonts.googleapis.com/css2?family=Inter&family=IBM+Plex+Serif"
