--- a/index.html
+++ b/index.html
@@ -1,17 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <link rel="icon" href="/vite.svg" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>The 4M</title>
-    <link
-      href="https://fonts.googleapis.com/css2?family=Inter&family=IBM+Plex+Serif"
-      rel="stylesheet"
-    />
-  </head>
-  <body>
-    <div id="root"></div>
-    <script type="module" src="/src/main.jsx"></script>
-  </body>
+	<head>
+		<meta charset="UTF-8" />
+		<link rel="icon" href="/vite.svg" />
+		<meta name="viewport" content="width=device-width, initial-scale=1" />
+		<title>4M</title>
+		<link
+			href="https://fonts.googleapis.com/css2?family=Inter&family=IBM+Plex+Serif"
+			rel="stylesheet"
+		/>
+	</head>
+	<body>
+		<div id="root"></div>
+		<script type="module" src="/src/main.jsx"></script>
+	</body>
 </html>
