--- a/index.html
+++ b/index.html
@@ -2,13 +2,19 @@
 <html lang="en">
 	<head>
 		<meta charset="UTF-8" />
-		<link rel="icon" href="/vite.svg" />
+		<link rel="icon" href="/forum.webp" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
-		<title>4M</title>
+		<title>forum</title>
 		<link
 			href="https://fonts.googleapis.com/css2?family=Inter&family=IBM+Plex+Serif"
 			rel="stylesheet"
 		/>
+		<meta
+			name="description"
+			content="Welcome to the 4M. Look inside to know more."
+		/>
+		<meta name="robots" content="index, follow" />
+		<meta name="googlebot" content="index, follow" />
 	</head>
 	<body>
 		<div id="root"></div>
